--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -1,1 +1,7 @@
-1.0.1: First version of Friends
+1.0.1:
+    - Creating basic schema
+    - create_activities_table.php
+    - create_activity_logs_table.php
+    - create_badges_table.php
+    - create_rewards_table.php
+    - create_usermetas_table.php
