This commit implements syncronization support for all wordpress post types that exist in the friends wordpress installation.  These types are imported into flat database tables based on laravel models
Currently there is no relational support yet.

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -3,5 +3,6 @@
     - create_activities_table.php
     - create_activity_logs_table.php
     - create_badges_table.php
+    - create_locations_table.php 
     - create_rewards_table.php
     - create_usermetas_table.php
