Added model and import for steps

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -5,4 +5,5 @@
     - create_badges_table.php
     - create_locations_table.php 
     - create_rewards_table.php
+    - create_steps_table.php
     - create_usermetas_table.php
