--- a/models/activity/columns.yaml
+++ b/models/activity/columns.yaml
@@ -3,5 +3,10 @@
 # ===================================
 
 columns:
-    id:
-        label: ID
+    title:
+        label: Title
+        searchable: true
+    is_published:
+        label: Published 
+    created_at:
+        label: Created
