--- a/models/reward/columns.yaml
+++ b/models/reward/columns.yaml
@@ -3,5 +3,18 @@
 # ===================================
 
 columns:
-    id:
-        label: ID
+    title:
+        label: Title
+        searchable: true
+    points:
+        label: Points to redeem
+        type: number
+    created_at:
+        label: Created
+        type: datetime
+    is_published:
+        label: Published 
+        type: switch
+    is_archived:
+        label: Archived 
+        type: switch 
