--- a/models/reward/fields.yaml
+++ b/models/reward/fields.yaml
@@ -3,6 +3,70 @@
 # ===================================
 
 fields:
-    id:
-        label: ID
-        disabled: true
+    title:
+        label: Title
+    image:
+        label: Image
+        type: fileupload
+        mode: image
+        imageHeight: 300 
+        imageWidth: 300 
+    description:
+        label: Description
+        type: richeditor
+        size: huge
+    excerpt:
+        label: Excerpt
+        description: a short amount of text about this badge.  This will be displayed in badge listings
+        type: richeditor
+        size: huge
+    points:
+        label: Points to redeem
+        description: The number of points required to redeem this reward
+        type: number
+    barcode:
+        label: Barcode Value
+        description: The value of the barcode printed on the coupon.
+    date_begin:
+        label: Beginning Date
+        description: If set, Reward can only be redeemed after this date.
+        type: datepicker
+        mode: datetime
+    date_end:
+        label: Ending Date
+        description: If set, Reward can only be redeemed before this date.
+        type: datepicker
+        mode: datetime
+    days_valid:
+        label: Days Valid
+        description: If set, the maximum number of days this reward is valid.
+    inventory:
+        label: Inventory
+        description: Number of reward items in inventory
+        type: number
+    hidden:
+        label: Hide Reward
+        description: If checked hide this Reward from users until they meet the points requirement.
+        type: checkbox
+    fine_print: 
+        label: The Fine Print
+        description: This is displayed on the Reward detail view and on the printed coupon.
+        type: textarea
+    enable_email:
+        label: Email upon redemption
+        description: If checked send an email to the user if they redeem this reward
+        type: checkbox
+    redemption_email:
+        label: Redemption Email
+        description: If not blank, send an email to the recipient upon redemption with the specified text.
+        type: textarea
+    is_published:
+        label: Published
+        type: checkbox
+    is_archived:
+        label: Archive
+        type: checkbox
+    created_at:
+        label: Created on
+        type: datepicker
+        mode: datetime
