--- a/controllers/rewards/config_list.yaml
+++ b/controllers/rewards/config_list.yaml
@@ -4,6 +4,7 @@
 
 # Model List Column configuration
 list: @/plugins/dma/friends/models/reward/columns.yaml
+filter: @/plugins/dma/friends/models/reward/config_filter.yaml
 
 # Model Class name
 modelClass: DMA\Friends\Models\Reward
