Cleanup ui interface for badges, rewards, and activities

--- a/controllers/activitylogs/config_form.yaml
+++ b/controllers/activitylogs/config_form.yaml
@@ -15,16 +15,16 @@ modelClass: DMA\Friends\Models\ActivityLog
 defaultRedirect: dma/friends/activitylogs
 
 # Create page
-create:
-    title: Create ActivityLogs
-    redirect: dma/friends/activitylogs/update/:id
-    redirectClose: dma/friends/activitylogs
-
+#create:
+#    title: Create ActivityLogs
+#    redirect: dma/friends/activitylogs/update/:id
+#    redirectClose: dma/friends/activitylogs
+#
 # Update page
-update:
-    title: Edit ActivityLogs
-    redirect: dma/friends/activitylogs
-    redirectClose: dma/friends/activitylogs
+#update:
+#    title: Edit ActivityLogs
+#    redirect: dma/friends/activitylogs
+#    redirectClose: dma/friends/activitylogs
 
 # Preview page
 preview:
