--- a/models/activity/fields.yaml
+++ b/models/activity/fields.yaml
@@ -5,57 +5,100 @@
 fields:
     title:
         label: Title
-    image:
-        label: Image
-        type: fileupload
-        mode: image
-        imageHeight: 300 
-        imageWidth: 300 
-    description:
-        label: Description
-        type: richeditor
-        size: huge
-    excerpt:
-        label: Excerpt
-        description: a short amount of text about this badge.  This will be displayed in badge listings
-        type: richeditor
-        size: huge
-    points:
-        label: Points to redeem
-        description: The number of points required to redeem this reward
-        type: number
-    activity_code:
-        label: Activity Code
-        description: The unique code for this activity.
-    activity_lockout:
-        label: Check-in Lockout (minutes)
-        description: Allow only check-in with same activity code once per X minutes.
-        type: number
-    time_restriction: 
-        label: Time Restriction
-        type: dropdown
-        options:
-            hours: Specific Days/Hours
-            dates: Specific Date Range
-    time_restriction_data:
-        label: TODO: create widget to handle time restriction data
-    date_begin:
-        label: Beginning Date
-        description: If set, Reward can only be redeemed after this date.
-        type: datepicker
-        mode: datetime
-    date_end:
-        label: Ending Date
-        description: If set, Reward can only be redeemed before this date.
-        type: datepicker
-        mode: datetime
-    is_published:
-        label: Published
-        type: checkbox
-    is_archived:
-        label: Archive
-        type: checkbox
-    created_at:
-        label: Created on
-        type: datepicker
-        mode: datetime
+    toolbar:
+        type: partial
+        path: @/plugins/dma/friends/partials/_content_toolbar.htm
+        cssClass: collapse-visible
+
+secondaryTabs:
+    stretch: true
+    fields:
+        # ===================================
+        #  Content tab 
+        # ===================================
+        description:
+            label: Description
+            tab: Content
+            span: left
+            type: richeditor
+            size: huge
+        image:
+            label: Image
+            tab: Content
+            span: right
+            type: fileupload
+            mode: image
+            imageHeight: 300 
+            imageWidth: 300 
+        excerpt:
+            label: Excerpt
+            description: a short amount of text about this badge.  This will be displayed in badge listings
+            tab: Content
+            span: left
+            type: richeditor
+            size: huge
+        # ===================================
+        #  Configuration tab 
+        # ===================================
+        points:
+            label: Points to redeem
+            description: The number of points required to redeem this reward
+            tab: Configuration
+            span: left
+            type: number
+        activity_code:
+            label: Activity Code
+            description: The unique code for this activity.
+            tab: Configuration
+            span: right
+        activity_lockout:
+            label: Check-in Lockout (minutes)
+            description: Allow only check-in with same activity code once per X minutes.
+            tab: Configuration
+            span: left
+            type: number
+        time_restriction: 
+            label: Time Restriction
+            tab: Configuration
+            span: right
+            type: dropdown
+            options:
+                hours: Specific Days/Hours
+                dates: Specific Date Range
+        time_restriction_data:
+            label: TODO: create widget to handle time restriction data
+            tab: Configuration
+            span: left 
+        # ===================================
+        #  Configuration tab 
+        # ===================================
+        date_begin:
+            label: Beginning Date
+            description: If set, Reward can only be redeemed after this date.
+            tab: Publishing Options 
+            span: left
+            type: datepicker
+            mode: datetime
+        date_end:
+            label: Ending Date
+            description: If set, Reward can only be redeemed before this date.
+            tab: Publishing Options 
+            span: right 
+            type: datepicker
+            mode: datetime
+        is_published:
+            label: Published
+            tab: Publishing Options 
+            span: left
+            type: checkbox
+        is_archived:
+            label: Archive
+            tab: Publishing Options 
+            span: left
+            type: checkbox
+        created_at:
+            label: Created on
+            tab: Publishing Options 
+            span: left
+            type: datepicker
+            mode: datetime
