Add interface for locations

--- a/models/location/columns.yaml
+++ b/models/location/columns.yaml
@@ -3,5 +3,7 @@
 # ===================================
 
 columns:
-    id:
-        label: ID
+    title:
+        label: Title
+    description:
+        label: Description
