--- a/models/location/fields.yaml
+++ b/models/location/fields.yaml
@@ -3,6 +3,12 @@
 # ===================================
 
 fields:
-    id:
-        label: ID
-        disabled: true
+    title:
+        label: Title
+    description:
+        label: Description
+        type: textarea
+    printer_reward:
+        label: Print rewards to:
+    printer_membership:
+        label: Print membership cards to:
