Introduces some basic model testing along with bug fixes to get tests to run successful.
Also includes some clean up of models and minor bug fixes

--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,12 @@
         },
         {
             "name": "Carlos Arroyo",
-            "email": "Carlos.Arroyo@dma.org",
+            "email": "Carlos.Arroyo@dma.org"
         }
     ],
 
     "require": {
-    	"ellipsesynergie/api-response": "0.5.*"
+        "ellipsesynergie/api-response": "0.5.*",
+        "league/factory-muffin": "~2.0"
     }
 }
