Implementation of time restrictions form widget that supports serialization

--- a/models/activity/fields.yaml
+++ b/models/activity/fields.yaml
@@ -5,6 +5,7 @@
 fields:
     title:
         label: Title
+        required: true
     toolbar:
         type: partial
         path: @/plugins/dma/friends/partials/_content_toolbar.htm
@@ -52,11 +53,12 @@ secondaryTabs:
         #  Configuration tab 
         # ===================================
         points:
-            label: Points to redeem
-            description: The number of points required to redeem this reward
+            label: Points Awarded
+            description: The number of points awarded for completing the activity
             tab: Configuration
             span: left
             type: number
+            required: true
         activity_code:
             label: Activity Code
             description: The unique code for this activity.
@@ -69,7 +71,7 @@ secondaryTabs:
             span: left
             type: number
         # ===================================
-        #  Configuration tab 
+        #  Publish tab 
         # ===================================
         time_restriction: 
             label: Time Restriction
@@ -77,14 +79,16 @@ secondaryTabs:
             span: left 
             type: dropdown
             options:
-                hours: Specific Days/Hours
-                dates: Specific Date Range
+                0: None
+                1: Specific Days/Hours
+                2: Specific Date Range
         time_restriction_data:
-            label: Restrictions
             type: timerestrictions
             tab: Publishing Options
-            span: left 
-            depends: time_restriction:hours
+            containerAttributes:
+                data-trigger-type: display
+                data-trigger: 'select[name="Activity[time_restriction]"]'
+                data-trigger-condition: value[1]
         date_begin:
             label: Beginning Date
             description: If set, Reward can only be redeemed after this date.
@@ -92,6 +96,10 @@ secondaryTabs:
             span: left
             type: datepicker
             mode: datetime
+            containerAttributes:
+                data-trigger-type: display
+                data-trigger: 'select[name="Activity[time_restriction]"]'
+                data-trigger-condition: value[2]
         date_end:
             label: Ending Date
             description: If set, Reward can only be redeemed before this date.
@@ -99,11 +107,16 @@ secondaryTabs:
             span: right 
             type: datepicker
             mode: datetime
+            containerAttributes:
+                data-trigger-type: display
+                data-trigger: 'select[name="Activity[time_restriction]"]'
+                data-trigger-condition: value[2]
         is_published:
             label: Published
             tab: Publishing Options 
             span: left
             type: checkbox
+            default: true
         is_archived:
             label: Archive
             tab: Publishing Options 
