Added mac address to location model

--- a/models/location/columns.yaml
+++ b/models/location/columns.yaml
@@ -5,5 +5,7 @@
 columns:
     title:
         label: Title
+    mac_address:
+        label: Mac Address
     description:
         label: Description
