Removed the taxonomies ActivityType and ActivityTriggerType.
These have been replaced with a polymorphic relation ship between the
Category model and activities and badges

--- a/controllers/categories/config_list.yaml
+++ b/controllers/categories/config_list.yaml
@@ -3,16 +3,16 @@
 # ===================================
 
 # Model List Column configuration
-list: @/plugins/dma/friends/models/activitytriggertype/columns.yaml
+list: $/dma/friends/models/category/columns.yaml
 
 # Model Class name
-modelClass: DMA\Friends\Models\ActivityTriggerType
+modelClass: DMA\Friends\Models\Category
 
 # List Title
-title: Manage ActivityTriggerTypes
+title: Manage Categories
 
 # Link URL for each record
-recordUrl: dma/friends/activitytriggertypes/update/:id
+recordUrl: dma/friends/categories/update/:id
 
 # Message to display if the list is empty
 noRecordsMessage: backend::lang.list.no_records
