--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -22,3 +22,7 @@
 1.0.5:
     - Create user table 
     - create_users_table.php
+1.0.6:
+    - Create categories table
+    - create_categories_table.php
+
