--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -25,4 +25,6 @@
 1.0.6:
     - Create categories table
     - create_categories_table.php
-
+1.0.7:
+    - Add location id to user_step table
+    - update_user_steps_table.php
