Refactor users into base user table
removed all references to RainLab\User\Models\User and refactored code to support new user model

updated tests

--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -28,3 +28,7 @@
 1.0.7:
     - Add location id to user_step table
     - update_user_steps_table.php
+1.0.8:
+    - Move points to user table and migrate points out of metadata table
+    - extend_user_table.php
+
