bug fix in activity type form elements

--- a/activities/activitycode/fields.yaml
+++ b/activities/activitycode/fields.yaml
@@ -1,3 +1,4 @@
-activity_code:
-    label: Activity Code
-    description: The unique code for this activity.
+fields:
+    activity_code:
+        label: Activity Code
+        description: The unique code for this activity.
