make activity type required

--- a/models/activity/fields.yaml
+++ b/models/activity/fields.yaml
@@ -68,6 +68,7 @@ secondaryTabs:
             label: Activity Type
             tab: Configuration
             type: activitytype
+            required: true
         # ===================================
         #  Publish tab 
         # ===================================
