Fixed bug with time restrictions and create link between activities and users when an activity is completed

--- a/models/activity/columns.yaml
+++ b/models/activity/columns.yaml
@@ -6,6 +6,9 @@ columns:
     title:
         label: Title
         searchable: true
+    activity_code:
+        label: Activity Code 
+        searchable: true
     points:
         label: Points Earned
         type: number
