- Added Notification and Channel listeners implementation to master.

--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
 
     "require": {
         "ellipsesynergie/api-response": "0.5.*",
-        "league/factory-muffin": "~2.0"
+        "league/factory-muffin": "~2.0",
+        "twilio/sdk": "3.12.6",
+        "j7mbo/twitter-api-php": "dev-master"        
     }
 }
