--- a/updates/version.yaml
+++ b/updates/version.yaml
@@ -40,4 +40,6 @@
 1.0.11:
     - First version of Notifications
     - create_notifications_table.php    
-    
+1.0.12:
+    - Add priority field to badges/activities
+    - add_priority.php    
