Added taxonomy import class

--- a/models/activity/fields.yaml
+++ b/models/activity/fields.yaml
@@ -137,3 +137,12 @@ secondaryTabs:
             span: left
             type: datepicker
             mode: datetime
+        # ===================================
+        #  Badges tab 
+        # ===================================
+        badges:
+            label: Badges using this activity
+            tab: Badges
+            type: partial
+            path: @/plugins/dma/friends/models/activity/badges.htm
+
